apps/blocky-ui/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment

metadata:
  name: blocky-ui
  namespace: blocky
  labels:
    app: blocky-ui

spec:
  replicas: 2
  selector:
    matchLabels:
      app: blocky-ui
  template:
    metadata:
      labels:
        app: blocky-ui
    spec:
      containers:
        - name: blocky-ui
          image: ghcr.io/gabeduartem/blocky-ui:1.6.1
          securityContext:
            runAsUser: 1001
            runAsGroup: 65533
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
          ports:
            - containerPort: 3000
              name: http
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 15
            timeoutSeconds: 5
            failureThreshold: 3
