apps/blocky-ui/service.yaml
---
apiVersion: v1
kind: Service

metadata:
  name: blocky-ui
  namespace: blocky

spec:
  type: LoadBalancer
  selector:
    app: blocky-ui
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
